# RK

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml
Behavioral/Observer/: CMakeLists.txt  ConcreteObserverA.cpp  ConcreteObserverA.h  ConcreteObserverB.cpp  ConcreteObserverB.h  ConcreteSubject.h  main.cpp
tests/: CMakeLists.txt  test_observer.cpp
